--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@supabase/supabase-js": "^2.47.10",
     "@types/yup": "^0.32.0",
     "framer-motion": "^11.15.0",
+    "lodash": "^4.17.21",
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.0",
-    "yup": "^1.5.0"
+    "yup": "^1.5.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
